--- a/src/revrsi.ui
+++ b/src/revrsi.ui
@@ -16,9 +16,39 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QGraphicsView" name="graphicsView"/>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QGraphicsView" name="graphicsView"/>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLabel" name="spieler_farbe">
+          <property name="text">
+           <string>Aktueller Spieler</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="Akt_Spieler_Label">
+          <property name="text">
+           <string>Schwarz</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
     </item>
    </layout>
+  </widget>
+  <widget class="QToolBar" name="mainToolBar">
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -36,12 +66,6 @@
     <addaction name="actionNeu"/>
     <addaction name="actionBeenden"/>
    </widget>
-   <widget class="QMenu" name="menuEinstellungen">
-    <property name="title">
-     <string>Einstellungen</string>
-    </property>
-    <addaction name="actionOptionen"/>
-   </widget>
    <widget class="QMenu" name="menuNetzwerk">
     <property name="title">
      <string>Netzwerk</string>
@@ -57,18 +81,8 @@
     <addaction name="action_ber"/>
    </widget>
    <addaction name="menuSpiel"/>
-   <addaction name="menuEinstellungen"/>
    <addaction name="menuNetzwerk"/>
    <addaction name="menuHilfe"/>
-  </widget>
-  <widget class="QStatusBar" name="statusBar"/>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
   </widget>
   <action name="actionNeu">
    <property name="text">
