Bilddateien in Resource Datei ausgelagert.

--- a/src/revrsi.ui
+++ b/src/revrsi.ui
@@ -49,6 +49,7 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionTest"/>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -117,6 +118,11 @@
   <action name="actionHilfe">
    <property name="text">
     <string>Hilfe</string>
+   </property>
+  </action>
+  <action name="actionTest">
+   <property name="text">
+    <string>test</string>
    </property>
   </action>
  </widget>
