--- a/src/win_gui.ui
+++ b/src/win_gui.ui
@@ -26,7 +26,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>crown.png</pixmap>
+    <pixmap resource="res/resources.qrc">:/Win/crown.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
@@ -36,7 +36,7 @@
    <property name="geometry">
     <rect>
      <x>182</x>
-     <y>22</y>
+     <y>20</y>
      <width>41</width>
      <height>51</height>
     </rect>
@@ -76,8 +76,8 @@
   <widget class="QLabel" name="platz2">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>110</y>
+     <x>60</x>
+     <y>140</y>
      <width>31</width>
      <height>51</height>
     </rect>
@@ -89,9 +89,9 @@
   <widget class="QLabel" name="platz3">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>110</y>
-     <width>31</width>
+     <x>303</x>
+     <y>140</y>
+     <width>25</width>
      <height>51</height>
     </rect>
    </property>
@@ -102,8 +102,8 @@
   <widget class="QLabel" name="platz4">
    <property name="geometry">
     <rect>
-     <x>182</x>
-     <y>200</y>
+     <x>180</x>
+     <y>190</y>
      <width>31</width>
      <height>51</height>
     </rect>
@@ -115,8 +115,8 @@
   <widget class="QLabel" name="zweiter">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>160</y>
+     <x>10</x>
+     <y>200</y>
      <width>131</width>
      <height>31</height>
     </rect>
@@ -137,8 +137,8 @@
   <widget class="QLabel" name="vierter">
    <property name="geometry">
     <rect>
-     <x>131</x>
-     <y>260</y>
+     <x>130</x>
+     <y>250</y>
      <width>131</width>
      <height>31</height>
     </rect>
@@ -159,8 +159,8 @@
   <widget class="QLabel" name="dritter">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>160</y>
+     <x>250</x>
+     <y>200</y>
      <width>131</width>
      <height>31</height>
     </rect>
@@ -192,6 +192,25 @@
    </property>
   </widget>
  </widget>
- <resources/>
- <connections/>
+ <resources>
+  <include location="res/resources.qrc"/>
+ </resources>
+ <connections>
+  <connection>
+   <sender>pushButton</sender>
+   <signal>clicked()</signal>
+   <receiver>win_gui</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>345</x>
+     <y>281</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>199</x>
+     <y>149</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
