--- a/src/revrsi.ui
+++ b/src/revrsi.ui
@@ -43,13 +43,27 @@
    </layout>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::LeftToolBarArea</set>
+   </property>
+   <property name="toolButtonStyle">
+    <enum>Qt::ToolButtonIconOnly</enum>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
-   <addaction name="actionTest"/>
+   <addaction name="actionLeft"/>
+   <addaction name="actionRight"/>
+   <addaction name="actionTop"/>
+   <addaction name="actionDown"/>
+   <addaction name="actionZoom"/>
+   <addaction name="actionShrink"/>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -120,14 +134,83 @@
     <string>Hilfe</string>
    </property>
   </action>
-  <action name="actionTest">
+  <action name="actionLeft">
+   <property name="icon">
+    <iconset resource="res/resources.qrc">
+     <normaloff>:/Positioning/arrow_left.png</normaloff>:/Positioning/arrow_left.png</iconset>
+   </property>
    <property name="text">
-    <string>test</string>
+    <string>Links</string>
+   </property>
+   <property name="toolTip">
+    <string>Spielfeld nach Links verschieben</string>
+   </property>
+  </action>
+  <action name="actionRight">
+   <property name="icon">
+    <iconset resource="res/resources.qrc">
+     <normaloff>:/Positioning/arrow_right.png</normaloff>:/Positioning/arrow_right.png</iconset>
+   </property>
+   <property name="text">
+    <string>Rechts</string>
+   </property>
+   <property name="toolTip">
+    <string>Spielfeld nach rechts verschieben</string>
+   </property>
+  </action>
+  <action name="actionTop">
+   <property name="icon">
+    <iconset resource="res/resources.qrc">
+     <normaloff>:/Positioning/arrow_top.png</normaloff>:/Positioning/arrow_top.png</iconset>
+   </property>
+   <property name="text">
+    <string>Oben</string>
+   </property>
+   <property name="toolTip">
+    <string>Spielfeld nach oben verschieben</string>
+   </property>
+  </action>
+  <action name="actionDown">
+   <property name="icon">
+    <iconset resource="res/resources.qrc">
+     <normaloff>:/Positioning/arrow_down.png</normaloff>:/Positioning/arrow_down.png</iconset>
+   </property>
+   <property name="text">
+    <string>Unten</string>
+   </property>
+   <property name="toolTip">
+    <string>Spielfeld nach unten verschieben</string>
+   </property>
+  </action>
+  <action name="actionZoom">
+   <property name="icon">
+    <iconset resource="res/resources.qrc">
+     <normaloff>:/Positioning/plus.png</normaloff>:/Positioning/plus.png</iconset>
+   </property>
+   <property name="text">
+    <string>Vergößern</string>
+   </property>
+   <property name="toolTip">
+    <string>Spielfeld heranzoomen</string>
+   </property>
+  </action>
+  <action name="actionShrink">
+   <property name="icon">
+    <iconset resource="res/resources.qrc">
+     <normaloff>:/Positioning/minus.png</normaloff>:/Positioning/minus.png</iconset>
+   </property>
+   <property name="text">
+    <string>Verkleinern</string>
+   </property>
+   <property name="toolTip">
+    <string>Spielfeld herauszoomen</string>
    </property>
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="res/resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>actionOptionen</sender>
