--- a/src/interfaces/client_gui.ui
+++ b/src/interfaces/client_gui.ui
@@ -18,13 +18,13 @@
     <rect>
      <x>30</x>
      <y>30</y>
-     <width>381</width>
+     <width>406</width>
      <height>131</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QHBoxLayout" name="p1_layout">
+     <layout class="QHBoxLayout" name="p1_layout_8">
       <item>
        <widget class="QLabel" name="p1_label">
         <property name="sizePolicy">
@@ -35,7 +35,7 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>150</width>
+          <width>90</width>
           <height>0</height>
          </size>
         </property>
@@ -46,8 +46,27 @@
       </item>
       <item>
        <widget class="QLabel" name="player1">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>230</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="text">
          <string>Leer</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="ID1_label">
+        <property name="text">
+         <string>ID:</string>
         </property>
        </widget>
       </item>
@@ -65,7 +84,7 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>150</width>
+          <width>90</width>
           <height>0</height>
          </size>
         </property>
@@ -76,8 +95,21 @@
       </item>
       <item>
        <widget class="QLabel" name="player2">
+        <property name="minimumSize">
+         <size>
+          <width>230</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="text">
          <string>Leer</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="ID2_label">
+        <property name="text">
+         <string>ID:</string>
         </property>
        </widget>
       </item>
@@ -95,7 +127,7 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>150</width>
+          <width>90</width>
           <height>0</height>
          </size>
         </property>
@@ -106,8 +138,21 @@
       </item>
       <item>
        <widget class="QLabel" name="player3">
+        <property name="minimumSize">
+         <size>
+          <width>230</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="text">
          <string>Leer</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="ID3_label">
+        <property name="text">
+         <string>ID:</string>
         </property>
        </widget>
       </item>
@@ -125,7 +170,7 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>150</width>
+          <width>90</width>
           <height>0</height>
          </size>
         </property>
@@ -136,8 +181,21 @@
       </item>
       <item>
        <widget class="QLabel" name="player4">
+        <property name="minimumSize">
+         <size>
+          <width>230</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="text">
          <string>Leer</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="ID4_label">
+        <property name="text">
+         <string>ID:</string>
         </property>
        </widget>
       </item>
@@ -149,7 +207,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>210</y>
+     <y>220</y>
      <width>91</width>
      <height>24</height>
     </rect>
@@ -162,7 +220,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>180</y>
+     <y>200</y>
      <width>53</width>
      <height>15</height>
     </rect>
@@ -174,8 +232,8 @@
   <widget class="QLineEdit" name="serverIP_lineEdit">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>176</y>
+     <x>100</x>
+     <y>196</y>
      <width>113</width>
      <height>23</height>
     </rect>
@@ -188,7 +246,7 @@
    <property name="geometry">
     <rect>
      <x>230</x>
-     <y>180</y>
+     <y>200</y>
      <width>41</width>
      <height>16</height>
     </rect>
@@ -201,7 +259,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>210</y>
+     <y>220</y>
      <width>91</width>
      <height>24</height>
     </rect>
@@ -214,7 +272,7 @@
    <property name="geometry">
     <rect>
      <x>280</x>
-     <y>180</y>
+     <y>200</y>
      <width>151</width>
      <height>16</height>
     </rect>
@@ -227,6 +285,29 @@
    </property>
    <property name="text">
     <string>- - - - - - - - - - - - - - - - - - - - - - -</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="spielername_label">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>170</y>
+     <width>71</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Spielername</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="spielername_lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>166</y>
+     <width>111</width>
+     <height>23</height>
+    </rect>
    </property>
   </widget>
  </widget>
