--- a/src/interfaces/server_gui.ui
+++ b/src/interfaces/server_gui.ui
@@ -52,6 +52,31 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="ID1_label">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>ID: </string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="p1_kill_button">
         <property name="enabled">
          <bool>false</bool>
@@ -110,6 +135,25 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="ID2_label">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>ID: </string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="p2_kill_button">
         <property name="enabled">
          <bool>false</bool>
@@ -156,6 +200,25 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="ID3_label">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>ID: </string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="p3_kill_button">
         <property name="enabled">
          <bool>false</bool>
@@ -198,6 +261,25 @@
        <widget class="QLabel" name="player4">
         <property name="text">
          <string>Leer</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="ID4_label">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>ID: </string>
         </property>
        </widget>
       </item>
